style: fix bg color of collapsed nav

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -204,12 +204,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (max-width: @screen-sm-min) {
-  #bs-example-navbar-collapse-1 {
-    background-color: @gray-darkest;
-  }
-}
-
 .navbar-brand img {
   width: 34px;
   height: 34px;
